Fixed z-index of popup close button.

--- a/src/client/src/components/UI/PopupControls/ClosePopupButton.sass
+++ b/src/client/src/components/UI/PopupControls/ClosePopupButton.sass
@@ -2,12 +2,13 @@
   position: absolute
   top: 0
   right: 0
-  z-index: 2
+  //z-index: 2
   cursor: pointer
   fill: var(--colorIconPrimary)
   display: flex
   gap: 4px
   margin: 12px 12px 0 0
+  z-index: 10
   .popup__controls__control
     cursor: pointer
     width: 36px
